vbnc/vbnc/vbnc/tests/Errors/30060-7.vb
Class T
    Const M_String As String = CByte(1)
End Class